backend nre homepagefixd

--- a/public/admin/about-content.html
+++ b/public/admin/about-content.html
@@ -169,8 +169,11 @@
           <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-700">
             <i class="fas fa-envelope"></i> Enquiry
           </a>
-          <a href="#" class="btn-action bg-gray-600">
-            <i class="fas fa-cog"></i> Home Content
+          <a href="/admin/our-work-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-briefcase"></i> Our Work (Home)
+          </a>
+          <a href="/admin/work-page-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-file-alt"></i> Our Work Detail
           </a>
           <a href="/admin/contact-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-phone"></i> Contact Page Content
