--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -94,7 +94,13 @@
             <i class="fas fa-cog"></i> Services Content
           </a>
           <a href="/admin/our-work-content.html" class="btn-action hover:bg-gray-600">
-            <i class="fas fa-briefcase"></i> Our Work
+            <i class="fas fa-briefcase"></i> Our Work (Home)
+          </a>
+          <a href="/admin/work-page-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-file-alt"></i> Our Work Detail
+          </a>
+          <a href="/admin/client-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-users"></i> Clients
           </a>
           <a href="/admin/privacy-policy-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-shield-alt"></i> Privacy Policy
