--- a/public/admin/services-content.html
+++ b/public/admin/services-content.html
@@ -100,13 +100,16 @@
             </button>
 
             <!-- Sidebar -->
+            <!-- Sidebar -->
             <div id="sidebar"
                 class="w-64 bg-gray-800 text-white fixed md:relative h-full z-20 sidebar-mobile md:transform-none">
                 <div class="p-4 border-b border-gray-700">
-                    <h1 class="text-sm md:text-xl font-bold pl-16 md:pl-0">VVWorx Admin Panel</h1>
+                    <h1 class="text-sm md:text-xl font-bold pl-16 md:pl-0">
+                        VVWorx Admin Panel
+                    </h1>
                 </div>
                 <nav class="mt-4">
-                    <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-700">
+                    <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-envelope"></i> Enquiry
                     </a>
                     <a href="/admin/about-content.html" class="btn-action hover:bg-gray-600">
@@ -118,7 +121,7 @@
                     <a href="/admin/about-page-content.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-user-circle"></i> About Page Content
                     </a>
-                    <a href="/admin/services-content.html" class="btn-action bg-gray-600">
+                    <a href="/admin/services-content.html" class="btn-action bg-gray-700">
                         <i class="fas fa-cog"></i> Services Content
                     </a>
                     <a href="/admin/our-work-content.html" class="btn-action hover:bg-gray-600">
@@ -127,8 +130,14 @@
                     <a href="/admin/work-page-content.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-file-alt"></i> Our Work Detail
                     </a>
+                    <a href="/admin/work-detail-content.html" class="btn-action hover:bg-gray-600">
+                        <i class="fas fa-file-invoice"></i> Work Page Detail Items
+                    </a>
+                    <a href="/admin/client-content.html" class="btn-action hover:bg-gray-600">
+                        <i class="fas fa-users"></i> Clients
+                    </a>
                     <a href="/admin/privacy-policy-content.html" class="btn-action hover:bg-gray-600">
-                        <i class="fas fa-cog"></i> privacy-policy
+                        <i class="fas fa-shield-alt"></i> Privacy Policy
                     </a>
                     <a href="/admin/footer-content.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-grip-horizontal"></i> Footer Content
