--- a/public/admin/work-page-content.html
+++ b/public/admin/work-page-content.html
@@ -85,13 +85,16 @@
             </button>
 
             <!-- Sidebar -->
+            <!-- Sidebar -->
             <div id="sidebar"
                 class="w-64 bg-gray-800 text-white fixed md:relative h-full z-20 sidebar-mobile md:transform-none">
                 <div class="p-4 border-b border-gray-700">
-                    <h1 class="text-sm md:text-xl font-bold pl-16 md:pl-0">VVWorx Admin Panel</h1>
+                    <h1 class="text-sm md:text-xl font-bold pl-16 md:pl-0">
+                        VVWorx Admin Panel
+                    </h1>
                 </div>
                 <nav class="mt-4">
-                    <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-700">
+                    <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-envelope"></i> Enquiry
                     </a>
                     <a href="/admin/about-content.html" class="btn-action hover:bg-gray-600">
@@ -109,8 +112,11 @@
                     <a href="/admin/our-work-content.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-briefcase"></i> Our Work (Home)
                     </a>
-                    <a href="#" class="btn-action bg-gray-600">
+                    <a href="/admin/work-page-content.html" class="btn-action bg-gray-700">
                         <i class="fas fa-file-alt"></i> Our Work Detail
+                    </a>
+                    <a href="/admin/work-detail-content.html" class="btn-action hover:bg-gray-600">
+                        <i class="fas fa-file-invoice"></i> Work Page Detail Items
                     </a>
                     <a href="/admin/client-content.html" class="btn-action hover:bg-gray-600">
                         <i class="fas fa-users"></i> Clients
