--- a/public/admin/about-page-content.html
+++ b/public/admin/about-page-content.html
@@ -97,6 +97,7 @@
       </button>
 
       <!-- Sidebar -->
+      <!-- Sidebar -->
       <div id="sidebar"
         class="w-64 bg-gray-800 text-white fixed md:relative h-full z-20 sidebar-mobile md:transform-none">
         <div class="p-4 border-b border-gray-700">
@@ -105,11 +106,20 @@
           </h1>
         </div>
         <nav class="mt-4">
-          <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-700">
+          <a href="/admin/dashboard.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-envelope"></i> Enquiry
           </a>
           <a href="/admin/about-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-cog"></i> Home Content
+          </a>
+          <a href="/admin/contact-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-phone"></i> Contact Page Content
+          </a>
+          <a href="/admin/about-page-content.html" class="btn-action bg-gray-700">
+            <i class="fas fa-user-circle"></i> About Page Content
+          </a>
+          <a href="/admin/services-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-cog"></i> Services Content
           </a>
           <a href="/admin/our-work-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-briefcase"></i> Our Work (Home)
@@ -117,17 +127,14 @@
           <a href="/admin/work-page-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-file-alt"></i> Our Work Detail
           </a>
-          <a href="/admin/contact-content.html" class="btn-action hover:bg-gray-600">
-            <i class="fas fa-phone"></i> Contact Page Content
+          <a href="/admin/work-detail-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-file-invoice"></i> Work Page Detail Items
           </a>
-          <a href="/admin/about-page-content.html" class="btn-action bg-gray-600">
-            <i class="fas fa-user-circle"></i> About Page Content
-          </a>
-          <a href="/admin/services-content.html" class="btn-action hover:bg-gray-600">
-            <i class="fas fa-cog"></i> Services Content
+          <a href="/admin/client-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-users"></i> Clients
           </a>
           <a href="/admin/privacy-policy-content.html" class="btn-action hover:bg-gray-600">
-            <i class="fas fa-cog"></i> Privacy Policy
+            <i class="fas fa-shield-alt"></i> Privacy Policy
           </a>
           <a href="/admin/footer-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-grip-horizontal"></i> Footer Content
@@ -1135,8 +1142,8 @@
     function showMessage(message, type) {
       const messageContainer = document.getElementById("messageContainer");
       messageContainer.className = `mx-4 mt-4 p-4 rounded-lg ${type === "success"
-          ? "bg-green-100 border border-green-400 text-green-700"
-          : "bg-red-100 border border-red-400 text-red-700"
+        ? "bg-green-100 border border-green-400 text-green-700"
+        : "bg-red-100 border border-red-400 text-red-700"
         }`;
       messageContainer.textContent = message;
       messageContainer.classList.remove("hidden");
