--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -70,6 +70,7 @@
       </button>
 
       <!-- Sidebar -->
+      <!-- Sidebar -->
       <div id="sidebar"
         class="w-64 bg-gray-800 text-white fixed md:relative h-full z-20 sidebar-mobile md:transform-none">
         <div class="p-4 border-b border-gray-700">
@@ -78,7 +79,7 @@
           </h1>
         </div>
         <nav class="mt-4">
-          <a href="#" class="btn-action bg-gray-700">
+          <a href="/admin/dashboard.html" class="btn-action bg-gray-700">
             <i class="fas fa-envelope"></i> Enquiry
           </a>
           <a href="/admin/about-content.html" class="btn-action hover:bg-gray-600">
@@ -98,6 +99,9 @@
           </a>
           <a href="/admin/work-page-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-file-alt"></i> Our Work Detail
+          </a>
+          <a href="/admin/work-detail-content.html" class="btn-action hover:bg-gray-600">
+            <i class="fas fa-file-invoice"></i> Work Page Detail Items
           </a>
           <a href="/admin/client-content.html" class="btn-action hover:bg-gray-600">
             <i class="fas fa-users"></i> Clients
